--- a/index.html
+++ b/index.html
@@ -4,39 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>BIWOC Health</title>
 </head>
 <body>
-    <!-- navigation bar -->
-    <header>
-        <h1>
-            <a href="/">BIWOC Health</a>
-        </h1>
+    <!-- top of page -->
+    <header class="flex-container">
+        <div class="logo container">
+            <a href="index.html">
+                <img src="./assets/images/biwoc-health-logo.jpg" alt="BIWOC Health Logo" class="logo center-align">
+            </a>
+        </div>
+        <!-- navigation bar -->
         <nav>
             <ul>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li>
-                    <a href="resources.html">Resources</a>
+                    <a href="resources.html" class="nav-link">Resources</a>
                 </li>
                 <li>
-                    <a href="story.html">Stories</a>
+                    <a href="research.html" class="nav-link">Research</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="story.html" class="nav-link">Stories</a>
+                </li>
+                <li>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <!-- hero/site welcome -->
-    <section>
+    <section class="hero">
     </section>
 
-    <!--"about us"-->
+    <!--"our background"-->
     <section>
+        <h2>Our Stories</h2>
     </section>
 
     <!-- "tell us your story" -->
