--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
     <section class="hero">
     </section>
 
+    <!-- buttons -->
+    <section class="options">
+        <div>
+            <ul>
+                <li>Make A Donation</li>
+                <li>Tell Us Your Story</li>
+                <li>Suggest A Resource</li>
+            </ul>
+        </div>
+    </section>
+
     <!--"our background"-->
     <section>
         <h2>Our Stories</h2>
