--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
     <section class="options">
         <div>
             <ul>
-                <li>Make A Donation</li>
-                <li>Tell Us Your Story</li>
-                <li>Suggest A Resource</li>
+                <li>
+                    <a>Make A Donation</a>
+                </li>
+                <li>
+                    <a>Tell Us Your Story</a>
+                </li>
+                <li>
+                    <a>Suggest A Resource</a>
+                </li>
             </ul>
         </div>
     </section>
