our stories section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
     <!--"our background"-->
     <section>
         <h2>Our Stories</h2>
+        <div class="person" id="eada">
+            <h3>Eada</h3>
+            <p>Bio text here</p>
+        </div>
+        <div class="person" id="sarah">
+            <h3>Sarah</h3>
+            <p>Bio text here</p>
+        </div>
     </section>
 
     <!-- "tell us your story" -->
