hero buttons and founders outline

--- a/index.html
+++ b/index.html
@@ -39,36 +39,59 @@
     </header>
 
     <!-- hero/site welcome -->
-    <section class="hero">
+    <section class="hero flex-container">
+        <div class="options">
+            <div class="option-row">
+                <div class=" option option-row-1">
+                    <a>Make A Donation</a>
+                </div>
+                <div class="option option-row-1">
+                    <a>Tell Us Your Story</a>
+                </div>
+            </div>
+            <div  class="option-row">
+                <div class="option option-row-2">
+                    <a>Suggest Resources</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- buttons -->
-    <section class="options">
-        <div>
-            <ul>
-                <li>
-                    <a>Make A Donation</a>
-                </li>
-                <li>
-                    <a>Tell Us Your Story</a>
-                </li>
-                <li>
-                    <a>Suggest A Resource</a>
-                </li>
-            </ul>
-        </div>
-    </section>
 
     <!--"our background"-->
-    <section>
-        <h2>Our Stories</h2>
-        <div class="person" id="eada">
-            <h3>Eada</h3>
-            <p>Bio text here</p>
+    <section class="our-background">
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Founders</h2>
         </div>
-        <div class="person" id="sarah">
-            <h3>Sarah</h3>
-            <p>Bio text here</p>
+    
+        <div class="founder-bios">
+            <article class="bio-container">
+                <img src="" alt="image of Sarah" />
+                <div class="bio">
+                    <h3 class="founder-name">Sarah</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
+                        saepe
+                        culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                        repellat!
+                    </p>
+                </div>
+            </article>
+            <article class="bio-container">
+                <img src="" alt="image of Eada" />
+                <div class="bio">
+                    <h3 class="founder-name">Eada</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
+                        saepe
+                        culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+                        repellat!
+                    </p>
+                </div>
+            </article>
         </div>
     </section>
 
