--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <title>BIWOC Health</title>
 </head>
 <body>
@@ -40,20 +42,25 @@
 
     <!-- hero/site welcome -->
     <section class="hero flex-container">
-        <div class="options">
+        <div class="option-container">
             <div class="option-row">
-                <div class=" option option-row-1">
+                <div class="option card">
+                    <i class="fa-solid fa-hand-holding-dollar fa-5x"></i>
                     <a>Make A Donation</a>
                 </div>
-                <div class="option option-row-1">
+                <div class="option card">
+                    <!-- <i class="fa-solid fa-book-open"></i> -->
+                    <i class="fa-solid fa-hospital-user fa-5x"></i>
                     <a>Tell Us Your Story</a>
                 </div>
-            </div>
-            <div  class="option-row">
-                <div class="option option-row-2">
+                <div class="option card">
+                    <i class="fa-solid fa-book-medical fa-5x"></i>
                     <a>Suggest Resources</a>
                 </div>
             </div>
+            <!-- <div  class="option-row">
+                
+            </div> -->
         </div>
     </section>
 
