hrefs and wireframes for other pages

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" /> -->
     <title>BIWOC Health</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
                     <a href="research.html" class="nav-link">Research</a>
                 </li>
                 <li>
-                    <a href="story.html" class="nav-link">Stories</a>
+                    <a href="stories.html" class="nav-link">Stories</a>
                 </li>
                 <li>
                     <a href="contact.html" class="nav-link">Contact</a>
