format social media section

--- a/index.html
+++ b/index.html
@@ -109,12 +109,20 @@
     <!-- footer -->
     <footer>
         <div class="socials-container">
-            <h2>Find us on social media!</h2>
-            <ul>
-                <li>Instagram</li>
-                <li>Twitter</li>
-                <li>LinkedIn</li>
-                <li>Facebook</li>
+            <h3>Find us on social media!</h3>
+            <ul class="socials-list">
+                <li>
+                    <a href="" class="socials-link">Instagram</a>
+                </li>
+                <li>
+                    <a href="" class="socials-link">Twitter</a>
+                </li>
+                <li>
+                    <a href="" class="socials-link">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="" class="socials-link">Facebook</a>
+                </li>
             </ul>
         </div>
     </footer>
