--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
     <section class="hero flex-container">
         <div class="option-container">
             <div class="option-row">
-                <div class="option card">
+                <div class="option card" id="donation-option">
                     <i class="fa-solid fa-hand-holding-dollar fa-5x"></i>
-                    <a>Make A Donation</a>
+                    <a class="title">Make A Donation</a>
                 </div>
-                <div class="option card">
+                <div class="option card" id="story-option">
                     <!-- <i class="fa-solid fa-book-open"></i> -->
                     <i class="fa-solid fa-hospital-user fa-5x"></i>
-                    <a>Tell Us Your Story</a>
+                    <a class="title">Tell Us Your Story</a>
                 </div>
-                <div class="option card">
+                <div class="option card" id="resource-option">
                     <i class="fa-solid fa-book-medical fa-5x"></i>
-                    <a>Suggest Resources</a>
+                    <a class="title">Suggest Resources</a>
                 </div>
             </div>
             <!-- <div  class="option-row">
@@ -69,7 +69,7 @@
     <!--"our background"-->
     <section class="our-background">
         <div class="flex-row">
-            <h2 class="section-title primary-border">Founders</h2>
+            <h2 class="section-title primary-border">Our Background</h2>
         </div>
     
         <div class="founder-bios">
@@ -109,7 +109,7 @@
     <!-- footer -->
     <footer>
         <div class="socials-container">
-            <h3>Find us on social media!</h3>
+            <h3 id="social-header">Find us on social media!</h3>
             <ul class="socials-list">
                 <li>
                     <a href="" class="socials-link">Instagram</a>
