muted hues, changed backgrounds

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" /> -->
+    <script src="https://kit.fontawesome.com/e4f66ca5a3.js" crossorigin="anonymous"></script>
     <title>BIWOC Health</title>
 </head>
 <body>
@@ -45,16 +44,16 @@
         <div class="option-container">
             <div class="option-row">
                 <div class="option card" id="donation-option">
-                    <i class="fa-solid fa-hand-holding-dollar fa-5x"></i>
+                    <i class="fa-solid fa-hand-holding-heart fa-4x"></i>
                     <a class="title">Make A Donation</a>
                 </div>
                 <div class="option card" id="story-option">
                     <!-- <i class="fa-solid fa-book-open"></i> -->
-                    <i class="fa-solid fa-hospital-user fa-5x"></i>
+                    <i class="fa-solid fa-hospital-user fa-4x"></i>
                     <a class="title">Tell Us Your Story</a>
                 </div>
                 <div class="option card" id="resource-option">
-                    <i class="fa-solid fa-book-medical fa-5x"></i>
+                    <i class="fa-solid fa-book-medical fa-4x"></i>
                     <a class="title">Suggest Resources</a>
                 </div>
             </div>
