finalized color scheme

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!--"our background"-->
     <section class="our-background">
         <div class="flex-row">
-            <h2 class="section-title primary-border">Our Background</h2>
+            <h2 class="section-title primary-border">OUR BACKGROUND</h2>
         </div>
     
         <div class="founder-bios">
@@ -106,9 +106,11 @@
     </section>
 
     <!-- footer -->
-    <footer>
+    <footer class="find-us">
         <div class="socials-container">
-            <h3 id="social-header">Find us on social media!</h3>
+            <div class="flex-row">
+                <h3 class="section-title primary-border">Find us on social media!</h3>
+            </div>
             <ul class="socials-list">
                 <li>
                     <a href="" class="socials-link">Instagram</a>
