increased margins, other minor layout changes

--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
     <!-- buttons -->
 
     <!--"our background"-->
+    <div class="background-section-title">
+        <div class="section-title">OUR BACKGROUND</div>
+    </div>
     <section class="our-background">
-        <div class="flex-row">
-            <h2 class="section-title primary-border">OUR BACKGROUND</h2>
-        </div>
-    
         <div class="founder-bios">
             <article class="bio-container">
                 <img src="" alt="image of Sarah" />
