home page section display reduction

--- a/contact.html
+++ b/contact.html
@@ -39,5 +39,13 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="page-title">
+            <h2>Contact Us</h2>
+        </div>
+        <div>
+            <p>Questions? Comments? </p>
+        </div>
+    </main>
 </body>
 </html>
