--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://kit.fontawesome.com/e4f66ca5a3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>BIWOC Health</title>
 </head>
 <body>
@@ -49,11 +49,11 @@
                 </div>
                 <div class="option card" id="story-option">
                     <!-- <i class="fa-solid fa-book-open"></i> -->
-                    <i class="fa-solid fa-hospital-user fa-4x"></i>
+                    <i class="fa-solid fa-book-open fa-4x"></i>
                     <a class="title">Tell Us Your Story</a>
                 </div>
                 <div class="option card" id="resource-option">
-                    <i class="fa-solid fa-book-medical fa-4x"></i>
+                    <i class="fa-solid fa-laptop-medical fa-4x"></i>
                     <a class="title">Suggest Resources</a>
                 </div>
             </div>
@@ -72,9 +72,9 @@
     <section class="our-background">
         <div class="founder-bios">
             <article class="bio-container">
-                <img src="" alt="image of Sarah" />
+                <img src="" alt="image of Eada" />
                 <div class="bio">
-                    <h3 class="founder-name">Sarah</h3>
+                    <h3 class="founder-name"><strong>Eada Al Soodani</strong></h3>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
                         saepe
@@ -85,9 +85,9 @@
                 </div>
             </article>
             <article class="bio-container">
-                <img src="" alt="image of Eada" />
+                <img src="" alt="image of Sarah" />
                 <div class="bio">
-                    <h3 class="founder-name">Eada</h3>
+                    <h3 class="founder-name"><strong>Sarah LaPlante</strong></h3>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
                         saepe
@@ -105,11 +105,11 @@
     </section>
 
     <!-- footer -->
+    <div class="background-section-title">
+        <h3 class="section-title">CONNECT WITH US</h3>
+    </div>
     <footer class="find-us">
         <div class="socials-container">
-            <div class="flex-row">
-                <h3 class="section-title primary-border">Find us on social media!</h3>
-            </div>
             <ul class="socials-list">
                 <li>
                     <a href="" class="socials-link">Instagram</a>
