--- a/about.html
+++ b/about.html
@@ -39,5 +39,13 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section title="mission">
+            <h2>Mission</h2>
+        </section>
+        <section title="vision">
+            <h2>Vision</h2>
+        </section>
+    </main>
 </body>
 </html>
