socials padding increase color change brown tones

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!--"our background"-->
     <div class="background-section-title">
-        <div class="section-title">OUR BACKGROUND</div>
+        <div class="background-title">OUR BACKGROUND</div>
     </div>
     <section class="our-background">
         <div class="founder-bios">
@@ -106,7 +106,7 @@
 
     <!-- footer -->
     <div class="background-section-title">
-        <h3 class="section-title">CONNECT WITH US</h3>
+        <h3 class="socials-title">CONNECT WITH US</h3>
     </div>
     <footer class="find-us">
         <div class="socials-container">
