wireframe contact form

--- a/contact.html
+++ b/contact.html
@@ -41,11 +41,24 @@
     </header>
     <main>
         <div class="page-title">
-            <h2>Contact Us</h2>
+            <h2>CONTACT US</h2>
+            <p>Questions? Comments? Suggestions? Let us know!</p>
         </div>
-        <div>
-            <p>Questions? Comments? </p>
-        </div>
+        <form id="contact-form">
+            <div>
+                <label for="name">Name</label>
+                <input type="text" name="name" />
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" name="email" />
+            </div>
+            <div>
+                <label for="message">Message</label>
+                <textarea name="message"></textarea>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
     </main>
 </body>
 </html>
