--- a/about.html
+++ b/about.html
@@ -39,12 +39,16 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section title="mission">
-            <h2>Mission</h2>
+    <main class="about-page">
+        <section title="mission" class="about-section">
+            <h2 class="title">MISSION</h2>
+            <p>BIWOC health is a nonprofit organization for Black, Indigenous, and Women of Color who are affected by the racial biases in the health care system. To advocate, spread awareness, and execute our vision.
+            </p>
         </section>
-        <section title="vision">
-            <h2>Vision</h2>
+        <section title="vision" class="about-section">
+            <h2 class="title">VISION</h2>
+            <p>BIWOC Health has a vision of a world where BIPOC women are seen, believed, and healed by all healthcare professionals by increasing the number of women in the healthcare system by providing scholarships and opportunities for them.
+            </p>
         </section>
     </main>
 </body>
