--- a/index.html
+++ b/index.html
@@ -44,17 +44,22 @@
         <div class="option-container">
             <div class="option-row">
                 <div class="option card" id="donation-option">
-                    <i class="fa-solid fa-hand-holding-heart fa-4x"></i>
-                    <a class="title">Make A Donation</a>
+                    <a href="donation.html">
+                        <i class="fa-solid fa-hand-holding-heart fa-4x"></i>
+                        <p class="title">Make A Donation</p>
+                    </a>
                 </div>
                 <div class="option card" id="story-option">
-                    <!-- <i class="fa-solid fa-book-open"></i> -->
-                    <i class="fa-solid fa-book-open fa-4x"></i>
-                    <a class="title">Tell Us Your Story</a>
+                    <a href="stories.html">
+                        <i class="fa-solid fa-book-open fa-4x"></i>
+                        <p class="title">Tell Us Your Story</p>
+                    </a>
                 </div>
-                <div class="option card" id="resource-option">
-                    <i class="fa-solid fa-laptop-medical fa-4x"></i>
-                    <a class="title">Suggest Resources</a>
+                <div class="option card" id="mailing-option">
+                    <a href="email-form.html">
+                        <i class="fa-solid fa-envelope fa-4x"></i>
+                        <p class="title">Join Our Mailing List</p>
+                    </a>
                 </div>
             </div>
             <!-- <div  class="option-row">
@@ -74,7 +79,7 @@
             <article class="bio-container">
                 <img src="" alt="image of Eada" />
                 <div class="bio">
-                    <h3 class="founder-name"><strong>Eada Al Soodani</strong></h3>
+                    <h3 class="founder-name"><strong>Eada Al-Soodani</strong></h3>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi
                         saepe
